--- a/public/board.ejs
+++ b/public/board.ejs
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/app.css">
-        <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css">
         <link rel="icon" href="/images/icon.png">
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -83,6 +83,7 @@
                                 </div>
                             </div>
                         </div>
+                        <button class="toolbar-button" data-action="tool-lock"><i class="mdi mdi-form-textbox-lock"></i></button>
                         <div class="toolbar-separator"></div>
                         <button class="toolbar-button" data-action="zoomin"><i class="mdi mdi-plus"></i></button>
                         <span id="zoomlevel" class="toolbar-text u-noselect">100%</span>
