--- a/public/board404.ejs
+++ b/public/board404.ejs
@@ -4,7 +4,7 @@
 
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/index.css">
-        <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.4.55/css/materialdesignicons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css">
         <link rel="icon" href="/images/icon.png">
     </head>
     <body>
