--- a/public/index.ejs
+++ b/public/index.ejs
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <link rel="stylesheet" href="/css/util.css">
         <link rel="stylesheet" href="/css/index.css">
-        <link rel="stylesheet" href="//cdn.materialdesignicons.com/5.2.45/css/materialdesignicons.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css">
         <link rel="icon" href="/images/icon.png">
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
